# teams-webhook-client

./: .env.example  .gitignore  CHAT_TRANSCRIPT.md  DESIGN_DECISIONS.md  Makefile  README.md  card.json  chat-transcript.md  design-decisions.md  example.py  payload.json  pyproject.toml  teams_webhook.py
.github/workflows/: post-to-teams.yml
docs/: README.md
docs/adr/: 0001-project-foundations.md  0002-repository-tracking-convention.md  0003-documentation-index-convention.md  README.md
docs/agent-transcripts/: 2026-04-04.md  2026-04-05.md  README.md
tests/: test_teams_webhook.py
